--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ env_logger = "0.8.4"
 lazy_static = "1.4.0"
 local_ipaddress = "0.1.3"
 log = "0.4.14"
+qr2term = "0.3.1"
 structopt = "0.3.23"
 tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread", "signal"] }
 warp = "0.3.1"
